# ctc-tracker

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/components/: mod.rs  setup_dialog.rs  video_grid.rs
src/data/: db.rs  mod.rs  model.rs  traits.rs  youtube_api.rs
