[package]
name = "ctc-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
eframe = "0.31.1"
google-youtube3 = "6.0.0"
iso8601 = "0.6.2"
log = "0.4.27"
log2 = "0.2.1"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-async-std"] }
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
